Version 0.87
??-??-2024
Updated by RoboCop
--------------------------------------------------------------------------------

- Scouts, Spies, Medics and Engineer bots will not use their lame default weapons when been spawned

- Bots will use Nail Guns for destroying SG turrets from a long distance

- Soldier bots now Rocket Jump slightly better, and for Medics and Scouts to Conc Jump

TODO List:-

>> Complete 'botdontmove' in order for "GolfBots" to stay stationary

>> To allow medic bots to heal more often, but not allow `JOB_BUFF_ALLY` to consume too many cells as engineers

>> Fix bots navigation when shot by enemies as they sometimes cannot seem to detect where damage is coming from

>> To prevent bots from shooting at spy corpses too long as, they aren't aware that a player switched teams as enemy spy

>> Allow bots to toss grenades at a higher elevation angle and from a lower distance as their target aim is too far

>> BONUS: Maybe add a feature for bots to have experience and wisdom or learned data in order to be a bit more human

--------------------------------------------------------------------------------
Version 0.85
December-23-2023
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ 2kfort23
	+ 2kfort5
	+ junob7
	+ lastresort_b1
	+ gauntlet
	+ tfc_orange

- Modernised RSM's angle bug fix

- Added C++17 Standard library functions support for Win32 and Linux

- Bots will now bunnyhop in stock maps plus shutdown2 and xpress2k4 but only in appropriate areas like wide spaces

- Both Win32 and Linux builds now compiled using AMBuild

- The waypoint `pathwaypoint_connect` will now auto connect path to neighbouring waypoints but at a shorter distance

- Reverted the `ProcessCommanderList` coding from version 0.791

- Added Path Check in Hunted Security Garages for bots to replenish ammo and health or escape

- Fixed the bot_chat cvar from not allowing bots to talk freely
